add the shortcuts for budgets

--- a/InvestmentTracker/Pages/Shared/_Layout.cshtml
+++ b/InvestmentTracker/Pages/Shared/_Layout.cshtml
@@ -142,12 +142,16 @@
                         <span class="keyboard-shortcut-description">Add One-Time Income</span>
                     </div>
                     <div class="keyboard-shortcut-item">
-                        <span class="keyboard-shortcut-key">[</span>
-                        <span class="keyboard-shortcut-description">Previous Month</span>
+                        <span class="keyboard-shortcut-key">←</span>
+                        <span class="keyboard-shortcut-description">Previous Month (also P)</span>
                     </div>
                     <div class="keyboard-shortcut-item">
-                        <span class="keyboard-shortcut-key">]</span>
-                        <span class="keyboard-shortcut-description">Next Month</span>
+                        <span class="keyboard-shortcut-key">→</span>
+                        <span class="keyboard-shortcut-description">Next Month (also N)</span>
+                    </div>
+                    <div class="keyboard-shortcut-item">
+                        <span class="keyboard-shortcut-key">C</span>
+                        <span class="keyboard-shortcut-description">Current Month (also T, Home)</span>
                     </div>
                     <div class="keyboard-shortcut-item">
                         <span class="keyboard-shortcut-key">U</span>
