regular expense page

--- a/InvestmentTracker/Pages/Shared/_Layout.cshtml
+++ b/InvestmentTracker/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Expenses/Index">Expenses</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Expenses/Regular">Regular Expenses</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Expenses/FamilyMembers">Family Members</a>
                             </li>
                             <li class="nav-item">
