fix totals styling

--- a/InvestmentTracker/Pages/Expenses/Index.cshtml
+++ b/InvestmentTracker/Pages/Expenses/Index.cshtml
@@ -51,26 +51,26 @@
 
 <div class="row mb-4">
     <div class="col-md-4">
-        <div class="card text-white bg-success">
+        <div class="card text-center">
             <div class="card-body">
-                <h5 class="card-title">Total Income</h5>
-                <p class="card-text fs-4">@Model.ViewModel.TotalIncome.ToString("C", new System.Globalization.CultureInfo("cs-CZ"))</p>
+                <h5 class="card-title text-success">@Model.ViewModel.TotalIncome.ToString("C", new System.Globalization.CultureInfo("cs-CZ"))</h5>
+                <p class="card-text">Total Income</p>
             </div>
         </div>
     </div>
     <div class="col-md-4">
-        <div class="card text-white bg-danger">
+        <div class="card text-center">
             <div class="card-body">
-                <h5 class="card-title">Total Expenses</h5>
-                <p class="card-text fs-4">@Model.ViewModel.TotalExpenses.ToString("C", new System.Globalization.CultureInfo("cs-CZ"))</p>
+                <h5 class="card-title text-danger">@Model.ViewModel.TotalExpenses.ToString("C", new System.Globalization.CultureInfo("cs-CZ"))</h5>
+                <p class="card-text">Total Expenses</p>
             </div>
         </div>
     </div>
     <div class="col-md-4">
-        <div class="card text-white @(Model.ViewModel.NetBalance >= 0 ? "bg-primary" : "bg-warning")">
+        <div class="card text-center">
             <div class="card-body">
-                <h5 class="card-title">Net Balance</h5>
-                <p class="card-text fs-4">@Model.ViewModel.NetBalance.ToString("C", new System.Globalization.CultureInfo("cs-CZ"))</p>
+                <h5 class="card-title @(Model.ViewModel.NetBalance >= 0 ? "text-primary" : "text-warning")">@Model.ViewModel.NetBalance.ToString("C", new System.Globalization.CultureInfo("cs-CZ"))</h5>
+                <p class="card-text">Net Balance</p>
             </div>
         </div>
     </div>
