--- a/InvestmentTracker/Pages/Shared/_Layout.cshtml
+++ b/InvestmentTracker/Pages/Shared/_Layout.cshtml
@@ -25,10 +25,10 @@
                         if (path.StartsWithSegments("/Expenses"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Expenses/Index">Expenses</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Expenses/Index">Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Expenses/Regular">Regular Expenses</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Expenses/Regular">Recurring Expenses</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Expenses/FamilyMembers">Family Members</a>
