fix the keyboard shortcuts

--- a/InvestmentTracker/Pages/Expenses/Index.cshtml
+++ b/InvestmentTracker/Pages/Expenses/Index.cshtml
@@ -1138,6 +1138,11 @@
                     return;
                 }
 
+                // Don't trigger shortcuts when modifier keys are pressed (Cmd, Ctrl, Alt, Shift)
+                if (event.metaKey || event.ctrlKey || event.altKey || event.shiftKey) {
+                    return;
+                }
+
                 switch(event.key) {
                     case 'ArrowLeft':
                     case 'p':
