--- a/InvestmentTracker/Pages/Shared/_Layout.cshtml
+++ b/InvestmentTracker/Pages/Shared/_Layout.cshtml
@@ -146,7 +146,7 @@
                 <div class="keyboard-shortcuts-list">
                     <div class="keyboard-shortcut-item">
                         <span class="keyboard-shortcut-key">A</span>
-                        <span class="keyboard-shortcut-description">Add Regular Expense</span>
+                        <span class="keyboard-shortcut-description">Add Expense (Dashboard & Recurring)</span>
                     </div>
                     <div class="keyboard-shortcut-item">
                         <span class="keyboard-shortcut-key">Q</span>
